--- a/config.ini
+++ b/config.ini
@@ -1,85 +1,63 @@
-[GENERAL]
-# Nom du projet
-ProjectName = CobbleDex Leaderboard Auto-Updater
+; ============================================================
+;  CONFIG GLOBAL (facultatif pour les runs GitHub Actions)
+; ============================================================
+RepoOwner = NeliKkTwitch
+RepoName  = cobbledex-leaderboardV4
+Branch    = main
 
-# Dossier et nom de sortie de l'image
-OutputFolder = images
-OutputFile = top3.png
+; ============================================================
+;  D’OÙ PROVIENNENT LES DONNÉES
+;  -> IMPORTANT : on lit directement sur ton Nitroserv via SFTP
+; ============================================================
+[MODE]
+Mode = sftp              ; (manual|local|ftp|sftp) -> ici sftp depuis Nitroserv
 
-# Rafraîchissement automatique toutes les 15 minutes
-RefreshInterval = 15
+[SFTP]
+Host     = ${SFTP_HOST}  ; <- Secrets GitHub
+Port     = 22
+User     = ${SFTP_USER}  ; <- Secrets GitHub
+Password = ${SFTP_PASS}  ; <- Secrets GitHub
 
-# Mode debug (met à True pour afficher plus de logs)
-Debug = True
+[REMOTE_PATHS]
+; Racine du monde côté Nitroserv (adapte si besoin)
+WorldRoot     = /Minecraft/world
+Advancements  = {WorldRoot}/advancements
+Playerdata    = {WorldRoot}/playerdata
+CobblemonData = {WorldRoot}/cobblemonplayerdata
+Stats         = {WorldRoot}/stats
 
+; ============================================================
+;  LEADERBOARD CONSOLE/CSV (optionnel – tu peux laisser comme ça)
+; ============================================================
+[VANTALLEADERBOARD]
+Enable   = false
+Category = minecraft:custom
 
-[INPUT]
+CreateCSV     = true
+CSVPath       = total.csv
 
-# How do you wish to input the data files to the script? Valid values: manual, local, ftp, sftp (default: manual)
-# manual: upload manually all the files in the relevant folders in the data folder
-# local: use the folder of a server present on this computer
-# ftp: use an ftp connection to a distant server
-# sftp: use an sftp connection to a distant server
-Mode = sftp
+CreateCSVMoney = false
+CSVPathMoney   = money.csv
 
-## LOCAL (change this config only if you use local)
-# Write here the path to the root of your server. It can be an absolute path or a relative path starting at this project folder's root (default: null)
-LocalPath = null
+; ============================================================
+;  IMAGE “TOP” (celle qui sera lue par le projecteur)
+; ============================================================
+[TOPIMAGE]
+Enable     = true
 
-## FTP and SFTP (change this config only if you use ftp or sftp)
-# Write here host address (default: null)
-Host = 109.239.157.170
-# Write here port number (default: 21)
-Port = 22
-# If FTP or SFTP is in use, you need to create 2 files and put them at the ROOT of the project (next to this config):
-# username.txt, containing ONLY the username
-# password.txt, containing ONLY the password
-# Input here the path to the main folder of the server, or nothing if it is directly at the root of the ftp/sftp (default: Minecraft)
-FTPPath = /
+; Nombre total de joueurs à afficher
+; (30 -> colonnes 1–10 / 11–20 / 21–30)
+NDPlayers  = 30
 
-[MINECRAFT]
-# Informations sur la structure de ton monde Minecraft
-ServerPath = /minecraft
-PlayerDataFolder = cobblemonplayerdata
-StatsFolder = stats
-WorldName = world
+; Grille (colonnes x lignes)
+Width      = 3
+Height     = 1
 
+; Chemin du PNG généré dans le repo
+ImagePath  = images/top3.png
 
-[LEADERBOARD]
-# Paramètres d’affichage du classement
-TopCount = 20
-ImageWidth = 1280
-ImageHeight = 720
-Theme = modern
+; Quelle métrique afficher : nb de Pokémon enregistrés (Cobblemon)
+Leaderboards = minecraft:pokemon_registered
 
-# Police utilisée (assure-toi que le fichier existe dans /fonts)
-FontPath = fonts/Minecraft-Seven_v2.ttf
-FontColor = FFFFFF
-FontSize = 24
-
-
-[DISCORD]
-# Envoi automatique sur un webhook Discord
-Enable = True
-WebhookURL =  ; ton URL webhook Discord ici (facultatif)
-
-
-[GITHUB]
-# Désactivé pour éviter l’erreur 401 (pas d’upload auto sur repo)
-Enable = False
-Token =
-RepoOwner = NeliKkTv
-RepoName = cobbledex-leaderboardV4
-Branch = main
-
-
-[ADVANCEMENTS]
-# Dossier contenant les fichiers d’avancements
-Path = /minecraft/world/advancements
-
-# Nom du critère utilisé pour le classement (ex: "pokemon_registered")
-Criteria = pokemon_registered
-
-# Extension des fichiers d’avancement
-Extension = .json
-
+; Titre(s) (facultatif)
+Titles     = Leaderboard
