--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 ; ============================================================
 ;  CONFIG GLOBAL (facultatif pour les runs GitHub Actions)
 ; ============================================================
-RepoOwner = NeliKkTwitch
+RepoOwner = NeliKkTv
 RepoName  = cobbledex-leaderboardV4
 Branch    = main
 
@@ -61,3 +61,4 @@ Leaderboards = minecraft:pokemon_registered
 
 ; Titre(s) (facultatif)
 Titles     = Leaderboard
+
