--- a/config.ini
+++ b/config.ini
@@ -1,33 +1,32 @@
-; ============================================================
-;  CONFIG GLOBAL (facultatif pour les runs GitHub Actions)
-; ============================================================
-RepoOwner = NeliKkTv
+; =========================================
+;  GITHUB REPO (EN-TÊTE DE SECTION REQUIS)
+; =========================================
+[GITHUB]
+RepoOwner = NeliKkTwitch
 RepoName  = cobbledex-leaderboardV4
 Branch    = main
 
 ; ============================================================
-;  D’OÙ PROVIENNENT LES DONNÉES
-;  -> IMPORTANT : on lit directement sur ton Nitroserv via SFTP
+;  D’OÙ PROVIENNENT LES DONNÉES  (SFTP Nitroserv)
 ; ============================================================
 [MODE]
-Mode = sftp              ; (manual|local|ftp|sftp) -> ici sftp depuis Nitroserv
+Mode = sftp              ; (manual|local|ftp|sftp)
 
 [SFTP]
-Host     = ${SFTP_HOST}  ; <- Secrets GitHub
+Host     = ${SFTP_HOST}
 Port     = 22
-User     = ${SFTP_USER}  ; <- Secrets GitHub
-Password = ${SFTP_PASS}  ; <- Secrets GitHub
+User     = ${SFTP_USER}
+Password = ${SFTP_PASS}
 
 [REMOTE_PATHS]
-; Racine du monde côté Nitroserv (adapte si besoin)
-WorldRoot     = /Minecraft/world
+WorldRoot     = /home/container/world
 Advancements  = {WorldRoot}/advancements
 Playerdata    = {WorldRoot}/playerdata
 CobblemonData = {WorldRoot}/cobblemonplayerdata
 Stats         = {WorldRoot}/stats
 
 ; ============================================================
-;  LEADERBOARD CONSOLE/CSV (optionnel – tu peux laisser comme ça)
+;  LEADERBOARD CONSOLE/CSV (optionnel)
 ; ============================================================
 [VANTALLEADERBOARD]
 Enable   = false
@@ -40,26 +39,13 @@ CreateCSVMoney = false
 CSVPathMoney   = money.csv
 
 ; ============================================================
-;  IMAGE “TOP” (celle qui sera lue par le projecteur)
+;  IMAGE “TOP” (lue par le projecteur)
 ; ============================================================
 [TOPIMAGE]
 Enable     = true
-
-; Nombre total de joueurs à afficher
-; (30 -> colonnes 1–10 / 11–20 / 21–30)
 NDPlayers  = 30
-
-; Grille (colonnes x lignes)
 Width      = 3
 Height     = 1
-
-; Chemin du PNG généré dans le repo
 ImagePath  = images/top3.png
-
-; Quelle métrique afficher : nb de Pokémon enregistrés (Cobblemon)
 Leaderboards = minecraft:pokemon_registered
-
-; Titre(s) (facultatif)
 Titles     = Leaderboard
-
-
