--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 ;  GITHUB REPO (EN-TÊTE DE SECTION REQUIS)
 ; =========================================
 [GITHUB]
-RepoOwner = NeliKkTwitch
+RepoOwner = NeliKkTv
 RepoName  = cobbledex-leaderboardV4
 Branch    = main
 
@@ -49,3 +49,4 @@ Height     = 1
 ImagePath  = images/top3.png
 Leaderboards = minecraft:pokemon_registered
 Titles     = Leaderboard
+
