--- a/config.ini
+++ b/config.ini
@@ -13,10 +13,10 @@ Branch    = main
 Mode = sftp              ; (manual|local|ftp|sftp)
 
 [SFTP]
-Host     = ${SFTP_HOST}
+Host     = 109.239.157.170
 Port     = 22
-User     = ${SFTP_USER}
-Password = ${SFTP_PASS}
+# username.txt, containing ONLY the username
+# password.txt, containing ONLY the password
 
 [REMOTE_PATHS]
 WorldRoot     = /home/container/world
@@ -49,4 +49,5 @@ Height     = 1
 ImagePath  = images/top3.png
 Leaderboards = minecraft:pokemon_registered
 Titles     = Leaderboard
+
 
