--- a/config.ini
+++ b/config.ini
@@ -1,23 +1,27 @@
-; =========================================
-;  GITHUB REPO (EN-TÊTE DE SECTION REQUIS)
-; =========================================
+# ---------- GITHUB ---------- #
 [GITHUB]
 RepoOwner = NeliKkTv
 RepoName  = cobbledex-leaderboardV4
 Branch    = main
 
-; ============================================================
-;  D’OÙ PROVIENNENT LES DONNÉES  (SFTP Nitroserv)
-; ============================================================
+# ---------- MODE D'ENTRÉE ---------- #
+# On couvre TOUTES les combinaisons possibles :
 [MODE]
-Mode = sftp              ; (manual|local|ftp|sftp)
+mode = sftp
+Mode = sftp
 
+[INPUT]
+mode = sftp
+Mode = sftp
+
+# ---------- SFTP (utilise les secrets GitHub Actions) ---------- #
 [SFTP]
-Host     = 109.239.157.170
+Host     = ${SFTP_HOST}
 Port     = 22
-# username.txt, containing ONLY the username
-# password.txt, containing ONLY the password
+User     = ${SFTP_USER}
+Password = ${SFTP_PASS}
 
+# ---------- CHEMINS DISTANTS ---------- #
 [REMOTE_PATHS]
 WorldRoot     = /home/container/world
 Advancements  = {WorldRoot}/advancements
@@ -25,22 +29,16 @@ Playerdata    = {WorldRoot}/playerdata
 CobblemonData = {WorldRoot}/cobblemonplayerdata
 Stats         = {WorldRoot}/stats
 
-; ============================================================
-;  LEADERBOARD CONSOLE/CSV (optionnel)
-; ============================================================
+# ---------- VANTALLEADERBOARD (optionnel) ---------- #
 [VANTALLEADERBOARD]
-Enable   = false
-Category = minecraft:custom
-
-CreateCSV     = true
-CSVPath       = total.csv
-
+Enable         = false
+Category       = minecraft:custom
+CreateCSV      = true
+CSVPath        = total.csv
 CreateCSVMoney = false
 CSVPathMoney   = money.csv
 
-; ============================================================
-;  IMAGE “TOP” (lue par le projecteur)
-; ============================================================
+# ---------- TOPIMAGE ---------- #
 [TOPIMAGE]
 Enable     = true
 NDPlayers  = 30
@@ -49,5 +47,3 @@ Height     = 1
 ImagePath  = images/top3.png
 Leaderboards = minecraft:pokemon_registered
 Titles     = Leaderboard
-
-
